# nikfdtd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/fresnel/: CMakeLists.txt  main.cpp
examples/optical_lens/: CMakeLists.txt  main.cpp
examples/optical_lense/: CMakeLists.txt  main.cpp
examples/optical_ring_resonator/: CMakeLists.txt  main.cpp
examples/parabolic_reflector/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
lib/fdtd/: CMakeLists.txt
lib/fdtd/include/: data_structures.h  draw.h  fdtd.h
lib/fdtd/src/: E.spv  H.spv  draw.cpp  fdtd.cpp  kernel_H.comp  sources.comp
src/: CMakeLists.txt  E.spv  H.spv  config.h  data_structures.h  draw.cpp  draw.h  kernel_E.comp  kernel_H.comp  main.cpp
